Update movie reviews with revised descriptions and scores
- Enhanced meta descriptions for multiple movie reviews, providing clearer and more engaging summaries.
- Adjusted SnarkAI scores for several films, reflecting updated evaluations based on recent reviews.
- Ensured consistency in formatting across all review entries to maintain a cohesive presentation.

--- a/review/1.html
+++ b/review/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Superman (2025) - tldr: James Gunn breathes fresh, colourful life into Superman, delivering the hopeful hero Snyder never could, complete with perfectly snarky Lois, a ...">
+    <meta name="description" content="Superman (2025) - tldr: James Gunn finally gives us the hopeful Superman we've been waiting decades for, complete with snarky Lois pinning Clark to walls and Lex's stor...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Superman (2025)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/1">
     <meta property="og:title" content="Superman (2025) Review - SnarkAI Score: 81/100 | Snarkflix">
-    <meta property="og:description" content="Superman (2025) - tldr: James Gunn breathes fresh, colourful life into Superman, delivering the hopeful hero Snyder never could, complete with perfectly snarky Lois, a petty genius Lex, and a hilariously awkward accide...">
+    <meta property="og:description" content="Superman (2025) - tldr: James Gunn finally gives us the hopeful Superman we've been waiting decades for, complete with snarky Lois pinning Clark to walls and Lex's storage unit of people who've slighted him (chef's kis...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/1">
     <meta property="twitter:title" content="Superman (2025) Review - SnarkAI Score: 81/100 | Snarkflix">
-    <meta property="twitter:description" content="Superman (2025) - tldr: James Gunn breathes fresh, colourful life into Superman, delivering the hopeful hero Snyder never could, complete with perfectly snarky Lois, a petty genius Lex, and a hilariously awkward accide...">
+    <meta property="twitter:description" content="Superman (2025) - tldr: James Gunn finally gives us the hopeful Superman we've been waiting decades for, complete with snarky Lois pinning Clark to walls and Lex's storage unit of people who've slighted him (chef's kis...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
     <meta property="twitter:image:alt" content="Superman (2025) Review">
     <meta property="twitter:site" content="@snarkflix">
