--- a/review/11.html
+++ b/review/11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Prey (2022) - Based on the information provided in the review, I would assign "Prey" a score of 72. The movie is praised for its beautiful landscapes, tense action ...">
+    <meta name="description" content="Prey (2022) - tldr: Finally, a Predator movie that doesn't suffer from the Worf Effect! Naru carries the entire film while everyone else is forgettable (except Coco...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Prey (2022)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/11">
-    <meta property="og:title" content="Prey (2022) Review - SnarkAI Score: 72/100 | Snarkflix">
-    <meta property="og:description" content="Prey (2022) - Based on the information provided in the review, I would assign "Prey" a score of 72. The movie is praised for its beautiful landscapes, tense action scenes, and strong protagonist, Naru, as well as t...">
+    <meta property="og:title" content="Prey (2022) Review - SnarkAI Score: 78/100 | Snarkflix">
+    <meta property="og:description" content="Prey (2022) - tldr: Finally, a Predator movie that doesn't suffer from the Worf Effect! Naru carries the entire film while everyone else is forgettable (except Coco, the authentic canine actor who's not trained at ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/11">
-    <meta property="twitter:title" content="Prey (2022) Review - SnarkAI Score: 72/100 | Snarkflix">
-    <meta property="twitter:description" content="Prey (2022) - Based on the information provided in the review, I would assign "Prey" a score of 72. The movie is praised for its beautiful landscapes, tense action scenes, and strong protagonist, Naru, as well as t...">
+    <meta property="twitter:title" content="Prey (2022) Review - SnarkAI Score: 78/100 | Snarkflix">
+    <meta property="twitter:description" content="Prey (2022) - tldr: Finally, a Predator movie that doesn't suffer from the Worf Effect! Naru carries the entire film while everyone else is forgettable (except Coco, the authentic canine actor who's not trained at ...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
     <meta property="twitter:image:alt" content="Prey (2022) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Prey (2022) Review - SnarkAI Score: 72/100 | Snarkflix</title>
+    <title>Prey (2022) Review - SnarkAI Score: 78/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
