--- a/review/14.html
+++ b/review/14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Whale (2022) - "The Whale" is a cinematic journey that's as intimate as it is uncomfortable. It's a claustrophobic exploration of self-loathing, redemption, and the ...">
+    <meta name="description" content="The Whale (2022) - tldr: Darren Aronofsky really wanted that Oscar, and Fraser deserved it. Charlie's trapped in his own body and guilt, eating buckets of fried chicken ...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, The Whale (2022)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/14">
-    <meta property="og:title" content="The Whale (2022) Review - SnarkAI Score: 85/100 | Snarkflix">
-    <meta property="og:description" content="The Whale (2022) - "The Whale" is a cinematic journey that's as intimate as it is uncomfortable. It's a claustrophobic exploration of self-loathing, redemption, and the human capacity for both cruelty and kindness. Bren...">
+    <meta property="og:title" content="The Whale (2022) Review - SnarkAI Score: 90/100 | Snarkflix">
+    <meta property="og:description" content="The Whale (2022) - tldr: Darren Aronofsky really wanted that Oscar, and Fraser deserved it. Charlie's trapped in his own body and guilt, eating buckets of fried chicken while his nurse leans her head on him (questionabl...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/14">
-    <meta property="twitter:title" content="The Whale (2022) Review - SnarkAI Score: 85/100 | Snarkflix">
-    <meta property="twitter:description" content="The Whale (2022) - "The Whale" is a cinematic journey that's as intimate as it is uncomfortable. It's a claustrophobic exploration of self-loathing, redemption, and the human capacity for both cruelty and kindness. Bren...">
+    <meta property="twitter:title" content="The Whale (2022) Review - SnarkAI Score: 90/100 | Snarkflix">
+    <meta property="twitter:description" content="The Whale (2022) - tldr: Darren Aronofsky really wanted that Oscar, and Fraser deserved it. Charlie's trapped in his own body and guilt, eating buckets of fried chicken while his nurse leans her head on him (questionabl...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
     <meta property="twitter:image:alt" content="The Whale (2022) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>The Whale (2022) Review - SnarkAI Score: 85/100 | Snarkflix</title>
+    <title>The Whale (2022) Review - SnarkAI Score: 90/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
