--- a/review/15.html
+++ b/review/15.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - The reviewer describes the movie as a fun and faithful portrayal of a D&D campaign, with plenty of nods to the source material and a lot of heart. The...">
+    <meta name="description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - tldr: Natural 20/10 - this is literally a D&D campaign come to life, complete with random scenery changes, consistently failing plans, and reliance on...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Dungeons & Dragons: Honour Amongst Thieves (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/15">
-    <meta property="og:title" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 90/100 | Snarkflix">
-    <meta property="og:description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - The reviewer describes the movie as a fun and faithful portrayal of a D&D campaign, with plenty of nods to the source material and a lot of heart. The diverse cast of characters and the various backst...">
+    <meta property="og:title" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 85/100 | Snarkflix">
+    <meta property="og:description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - tldr: Natural 20/10 - this is literally a D&D campaign come to life, complete with random scenery changes, consistently failing plans, and reliance on random objects to solve problems. The Paladin wal...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/15">
-    <meta property="twitter:title" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 90/100 | Snarkflix">
-    <meta property="twitter:description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - The reviewer describes the movie as a fun and faithful portrayal of a D&D campaign, with plenty of nods to the source material and a lot of heart. The diverse cast of characters and the various backst...">
+    <meta property="twitter:title" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 85/100 | Snarkflix">
+    <meta property="twitter:description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - tldr: Natural 20/10 - this is literally a D&D campaign come to life, complete with random scenery changes, consistently failing plans, and reliance on random objects to solve problems. The Paladin wal...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
     <meta property="twitter:image:alt" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 90/100 | Snarkflix</title>
+    <title>Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 85/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
