--- a/review/16.html
+++ b/review/16.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Winnie the Pooh: Blood and Honey (2023) - The reviewer heavily criticizes the film for its poor execution, confusing plot, shallow character development, and lack of closure. While there are a...">
+    <meta name="description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks ...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Winnie the Pooh: Blood and Honey (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/16">
-    <meta property="og:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 18/100 | Snarkflix">
-    <meta property="og:description" content="Winnie the Pooh: Blood and Honey (2023) - The reviewer heavily criticizes the film for its poor execution, confusing plot, shallow character development, and lack of closure. While there are a few praised elements, such as some line drawings ...">
+    <meta property="og:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 15/100 | Snarkflix">
+    <meta property="og:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks like an overweight furry you could outdistance at ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/16">
-    <meta property="twitter:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 18/100 | Snarkflix">
-    <meta property="twitter:description" content="Winnie the Pooh: Blood and Honey (2023) - The reviewer heavily criticizes the film for its poor execution, confusing plot, shallow character development, and lack of closure. While there are a few praised elements, such as some line drawings ...">
+    <meta property="twitter:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 15/100 | Snarkflix">
+    <meta property="twitter:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks like an overweight furry you could outdistance at ...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="twitter:image:alt" content="Winnie the Pooh: Blood and Honey (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 18/100 | Snarkflix</title>
+    <title>Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 15/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
