--- a/review/26.html
+++ b/review/26.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Moonfall (2022) - Based on the review provided, it seems that the movie in question was very poorly received by the reviewer. Given the negative tone and language used ...">
+    <meta name="description" content="Moonfall (2022) - tldr: Moonfall is Roland Emmerich's latest disaster porn where the moon decides to go rogue and crash into Earth. Features the most hilariously ineffe...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Moonfall (2022)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/26">
-    <meta property="og:title" content="Moonfall (2022) Review - SnarkAI Score: 10/100 | Snarkflix">
-    <meta property="og:description" content="Moonfall (2022) - Based on the review provided, it seems that the movie in question was very poorly received by the reviewer. Given the negative tone and language used in the review, I would assign this movie a score o...">
+    <meta property="og:title" content="Moonfall (2022) Review - SnarkAI Score: 5/100 | Snarkflix">
+    <meta property="og:description" content="Moonfall (2022) - tldr: Moonfall is Roland Emmerich's latest disaster porn where the moon decides to go rogue and crash into Earth. Features the most hilariously ineffective moon ever (you could outdistance it at a bri...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/26">
-    <meta property="twitter:title" content="Moonfall (2022) Review - SnarkAI Score: 10/100 | Snarkflix">
-    <meta property="twitter:description" content="Moonfall (2022) - Based on the review provided, it seems that the movie in question was very poorly received by the reviewer. Given the negative tone and language used in the review, I would assign this movie a score o...">
+    <meta property="twitter:title" content="Moonfall (2022) Review - SnarkAI Score: 5/100 | Snarkflix">
+    <meta property="twitter:description" content="Moonfall (2022) - tldr: Moonfall is Roland Emmerich's latest disaster porn where the moon decides to go rogue and crash into Earth. Features the most hilariously ineffective moon ever (you could outdistance it at a bri...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
     <meta property="twitter:image:alt" content="Moonfall (2022) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Moonfall (2022) Review - SnarkAI Score: 10/100 | Snarkflix</title>
+    <title>Moonfall (2022) Review - SnarkAI Score: 5/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
