--- a/review/33.html
+++ b/review/33.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encanto (2021) - tldr: Based on the review, it seems that the movie has some strong elements, particularly in the form of Luisa's song, but also suffers from a toxic a...">
+    <meta name="description" content="Encanto (2021) - tldr: Encanto's got some bangers (Luisa's song slaps), but it's basically a toxic family therapy session disguised as a Disney musical. Features the m...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Encanto (2021)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/33">
     <meta property="og:title" content="Encanto (2021) Review - SnarkAI Score: 60/100 | Snarkflix">
-    <meta property="og:description" content="Encanto (2021) - tldr: Based on the review, it seems that the movie has some strong elements, particularly in the form of Luisa's song, but also suffers from a toxic and abusive family dynamic that leaves some charact...">
+    <meta property="og:description" content="Encanto (2021) - tldr: Encanto's got some bangers (Luisa's song slaps), but it's basically a toxic family therapy session disguised as a Disney musical. Features the most unhinged grandmother ever (she's basically the...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/33">
     <meta property="twitter:title" content="Encanto (2021) Review - SnarkAI Score: 60/100 | Snarkflix">
-    <meta property="twitter:description" content="Encanto (2021) - tldr: Based on the review, it seems that the movie has some strong elements, particularly in the form of Luisa's song, but also suffers from a toxic and abusive family dynamic that leaves some charact...">
+    <meta property="twitter:description" content="Encanto (2021) - tldr: Encanto's got some bangers (Luisa's song slaps), but it's basically a toxic family therapy session disguised as a Disney musical. Features the most unhinged grandmother ever (she's basically the...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
     <meta property="twitter:image:alt" content="Encanto (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
