--- a/review/35.html
+++ b/review/35.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new an...">
+    <meta name="description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing u...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Eternals (2021)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="og:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="og:description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new and interesting ways and is worth a watch if you wan...">
+    <meta property="og:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. Features the most boring superheroes ever (...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="twitter:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="twitter:description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new and interesting ways and is worth a watch if you wan...">
+    <meta property="twitter:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. Features the most boring superheroes ever (...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="twitter:image:alt" content="Eternals (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
