--- a/review/36.html
+++ b/review/36.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. Whil...">
+    <meta name="description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and ...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Ghostbusters: Afterlife (2021)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/36">
-    <meta property="og:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
-    <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. While the review does not outright say the movie is te...">
+    <meta property="og:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 45/100 | Snarkflix">
+    <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. Features the ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/36">
-    <meta property="twitter:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
-    <meta property="twitter:description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. While the review does not outright say the movie is te...">
+    <meta property="twitter:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 45/100 | Snarkflix">
+    <meta property="twitter:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. Features the ...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="twitter:image:alt" content="Ghostbusters: Afterlife (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix</title>
+    <title>Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 45/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
