--- a/review/37.html
+++ b/review/37.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Black Widow (2021) - tldr: Based on the review, I would assign this movie a score of around 65. While it is described as a decent film with strong characterisation for the...">
+    <meta name="description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. Features the most boring superhero ever (s...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Black Widow (2021)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/37">
     <meta property="og:title" content="Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix">
-    <meta property="og:description" content="Black Widow (2021) - tldr: Based on the review, I would assign this movie a score of around 65. While it is described as a decent film with strong characterisation for the main character, it suffers from Marvel's lack of ...">
+    <meta property="og:description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. Features the most boring superhero ever (she's basically a normal person with good fighting ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/37">
     <meta property="twitter:title" content="Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix">
-    <meta property="twitter:description" content="Black Widow (2021) - tldr: Based on the review, I would assign this movie a score of around 65. While it is described as a decent film with strong characterisation for the main character, it suffers from Marvel's lack of ...">
+    <meta property="twitter:description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. Features the most boring superhero ever (she's basically a normal person with good fighting ...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="twitter:image:alt" content="Black Widow (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
