--- a/review/4.html
+++ b/review/4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest film is a weird rollercoaster of war orphans, family drama, giant birds, and magical nonsense wrapped in Ghibli's trademark ch...">
+    <meta name="description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest retirement-unretirement project is peak Miyazaki weirdness: war orphans, morally questionable dads hooking up with dead wives'...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, The Boy and the Heron (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/4">
     <meta property="og:title" content="The Boy and the Heron (2023) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="og:description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest film is a weird rollercoaster of war orphans, family drama, giant birds, and magical nonsense wrapped in Ghibli's trademark charm. The animation is stunning, but starting to fe...">
+    <meta property="og:description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest retirement-unretirement project is peak Miyazaki weirdness: war orphans, morally questionable dads hooking up with dead wives' sisters, and potato-faced old women who apparentl...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/4">
     <meta property="twitter:title" content="The Boy and the Heron (2023) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="twitter:description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest film is a weird rollercoaster of war orphans, family drama, giant birds, and magical nonsense wrapped in Ghibli's trademark charm. The animation is stunning, but starting to fe...">
+    <meta property="twitter:description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest retirement-unretirement project is peak Miyazaki weirdness: war orphans, morally questionable dads hooking up with dead wives' sisters, and potato-faced old women who apparentl...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
     <meta property="twitter:image:alt" content="The Boy and the Heron (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
