Implement delayed redirect for crawlers in review pages and enhance loading UI
- Updated review pages to include a delay for social media crawlers to read meta tags before redirecting.
- Added a user-friendly loading UI with titles and clickable links for immediate access if automatic redirection fails.
- Removed the Lighthouse CI workflow file as part of project cleanup.

--- a/review/4.html
+++ b/review/4.html
@@ -59,11 +59,24 @@
     </script>
     
     <script>
-        // Redirect to the main page with the review parameter
-        window.location.href = 'https://snarkflix.netlify.app/?review=4';
+        // Delay redirect to allow social media crawlers to read meta tags
+        // But redirect immediately if this is a real user (not a crawler)
+        if (navigator.userAgent && !navigator.userAgent.includes('bot') && !navigator.userAgent.includes('crawler')) {
+            // Immediate redirect for real users
+            window.location.href = 'https://snarkflix.netlify.app/?review=4';
+        } else {
+            // Delayed redirect for crawlers
+            setTimeout(function() {
+                window.location.href = 'https://snarkflix.netlify.app/?review=4';
+            }, 3000);
+        }
     </script>
 </head>
 <body>
-    <p>Redirecting to review...</p>
+    <div style="font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #1a1a1a; color: white; min-height: 100vh;">
+        <h1>The Boy and the Heron (2023) Review</h1>
+        <p>Loading review...</p>
+        <p><a href="https://snarkflix.netlify.app/?review=4" style="color: #007bff;">Click here if you're not redirected automatically</a></p>
+    </div>
 </body>
 </html>
