Add Trakt viewing statistics to about section

--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
                         We know that not every movie is a masterpiece, and even the best movies have their flaws. However, we believe that every film has something to offer, whether it's good, bad, or just plain weird. Our goal is not to tear down movies or insult filmmakers, but to provide our readers with an enjoyable and humorous perspective on cinema.
                     </p>
                     <p>
-                        With our sharp wit and adorable companion, we're always ready to take on whatever movie comes our way. So if you're looking for a fresh take on the latest blockbuster or just want to share in our love of movies, join us at Snarkflix for a fun and snarky ride through the world of cinema!
+                        With over <strong>1,495 movies</strong> (119 days of runtime) and <strong>25,321 episodes</strong> across 738 days of television logged on Trakt, we've earned our credentials through sheer dedication to the craft of watching things. Every cinema visit, streaming binge, and questionable direct-to-video decision has been meticulously tracked, proving we really do have nothing better to do than judge your favorite films.
+                    </p>
+                    <p>
+                        With our sharp wit, an ever-growing watchlist, and our adorable Bernedoodle companion, we're always ready to take on whatever movie comes our way. So if you're looking for a fresh take on the latest blockbuster or just want to share in our love of movies, join us at Snarkflix for a fun and snarky ride through the world of cinema!
                     </p>
                 </div>
                 <div class="snarkflix-about-image">
