Implement cache busting solution for fresh content delivery
- Add version query parameters to script tags in index.html
- Update Service Worker to use network-first strategy for JS files
- Bump Service Worker cache version to force cache refresh
- Create update-version.js script to automate version updates
- Add npm scripts: 'update-version' and 'deploy' for easy deployment
- Document reviews needing better endings in todo.md

This ensures users always get fresh review content without manual cache clearing.

--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
         </div>
     </footer>
 
-    <script src="reviews-data.js"></script>
-    <script src="script.js"></script>
+    <script src="reviews-data.js?v=2025-10-06-001"></script>
+    <script src="script.js?v=2025-10-06-001"></script>
     
     <!-- Service Worker Registration -->
     <script>
